syntax = "proto3";

option csharp_namespace = "GrpcAgent";

package GrpcAgent;

service Subscriber {
  rpc Subscribe (SubscribeRequest) returns (SubscribeReply);
}

// topicul la care facem subscribe si adresa de la subscriberul curent, cine face acum subscribe, endpoint-ul
message SubscribeRequest {
  string topic = 1;
  string address = 2;
}

message SubscribeReply {
  bool isSuccess = 1;
}
